getSkuByEan works and Redirect

--- a/manifest.json
+++ b/manifest.json
@@ -7,12 +7,18 @@
   "builders": {
     "messages": "1.x",
     "store": "0.x",
-    "react": "3.x"
+    "react": "3.x",
+    "node": "6.x"
   },
   "dependencies": {
     "vtex.styleguide": "9.x",
     "vtex.css-handles": "0.x",
     "vtex.session-client": "1.x"
   },
+  "policies": [
+    {
+      "name": "Sku.aspx"
+    }
+  ],
   "$schema": "https://raw.githubusercontent.com/vtex/node-vtex-api/master/gen/manifest.schema"
 }
