--- a/manifest.json
+++ b/manifest.json
@@ -1,5 +1,5 @@
 {
-  "vendor": "gbonacchi",
+  "vendor": "vtexarg",
   "name": "qr-barcode-reader",
   "version": "0.0.1",
   "title": "qr-barcode-reader",
@@ -14,6 +14,15 @@
     "vtex.styleguide": "9.x",
     "vtex.css-handles": "0.x",
     "vtex.session-client": "1.x"
+  },
+  "billingOptions": {
+    "support": {
+      "url": "https://support.vtex.com/hc/requests"
+    },
+    "type": "free",
+    "availableCountries": [
+      "*"
+    ]
   },
   "policies": [
     {
