gql works + lint

--- a/manifest.json
+++ b/manifest.json
@@ -8,7 +8,8 @@
     "messages": "1.x",
     "store": "0.x",
     "react": "3.x",
-    "node": "6.x"
+    "node": "6.x",
+    "graphql": "1.x"
   },
   "dependencies": {
     "vtex.styleguide": "9.x",
@@ -20,9 +21,7 @@
       "url": "https://support.vtex.com/hc/requests"
     },
     "type": "free",
-    "availableCountries": [
-      "*"
-    ]
+    "availableCountries": ["*"]
   },
   "policies": [
     {
