--- a/react/tsconfig.json
+++ b/react/tsconfig.json
@@ -6,17 +6,12 @@
     "allowSyntheticDefaultImports": true,
     "jsx": "react",
     "noEmitOnError": false,
+    "typeRoots": ["node_modules/@types"],
     "types": ["node", "jest"],
     "lib": ["es2017", "dom"],
     "module": "esnext",
     "moduleResolution": "node",
     "target": "es2017"
   },
-  "include": [
-    "./typings/*.d.ts",
-    "./**/*.tsx",
-    "./**/*.ts",
-    "./**/*.js",
-    "./**/*"
-  ]
+  "include": ["./typings/*.d.ts", "./**/*.tsx", "./**/*.ts"]
 }
