--- a/react/package.json
+++ b/react/package.json
@@ -4,6 +4,8 @@
   },
   "dependencies": {
     "@vtex/css-handles": "^1.0.0",
+    "@zxing/library": "^0.17.0",
+    "barcode-react-scanner": "^1.2.0",
     "classnames": "^2.2.6",
     "ramda": "^0.26.1",
     "react": "^16.12.0",
