fix the alert success

--- a/manifest.json
+++ b/manifest.json
@@ -15,16 +15,15 @@
     "vtex.styleguide": "9.x",
     "vtex.css-handles": "0.x",
     "vtex.session-client": "1.x",
-    "vtex.order-items": "0.x"
+    "vtex.order-items": "0.x",
+    "vtex.order-manager": "0.x"
   },
   "billingOptions": {
     "support": {
       "url": "https://support.vtex.com/hc/requests"
     },
     "type": "free",
-    "availableCountries": [
-      "*"
-    ]
+    "availableCountries": ["*"]
   },
   "policies": [
     {
