--- a/manifest.json
+++ b/manifest.json
@@ -16,14 +16,17 @@
     "vtex.css-handles": "0.x",
     "vtex.session-client": "1.x",
     "vtex.order-items": "0.x",
-    "vtex.order-manager": "0.x"
+    "vtex.order-manager": "0.x",
+    "vtex.pixel-manager": "1.x"
   },
   "billingOptions": {
     "support": {
       "url": "https://support.vtex.com/hc/requests"
     },
     "type": "free",
-    "availableCountries": ["*"]
+    "availableCountries": [
+      "*"
+    ]
   },
   "policies": [
     {
