--- a/manifest.json
+++ b/manifest.json
@@ -17,7 +17,9 @@
     "vtex.session-client": "1.x",
     "vtex.order-items": "0.x",
     "vtex.order-manager": "0.x",
-    "vtex.pixel-manager": "1.x"
+    "vtex.pixel-manager": "1.x",
+    "vtex.checkout-resources": "0.x",
+    "vtex.checkout-graphql": "0.x"
   },
   "billingOptions": {
     "support": {
