--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
   "vendor": "vtexarg",
   "name": "qr-barcode-reader",
-  "version": "0.3.0",
+  "version": "0.4.0",
   "title": "qr-barcode-reader",
   "description": "qr-barcode-reader",
   "builders": {
@@ -9,7 +9,8 @@
     "store": "0.x",
     "react": "3.x",
     "node": "6.x",
-    "graphql": "1.x"
+    "graphql": "1.x",
+    "docs": "0.x"
   },
   "dependencies": {
     "vtex.styleguide": "9.x",
