--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "devDependencies": {
     "@vtex/prettier-config": "^0.1.3",
-    "eslint": "^6.8.0",
+    "eslint": "^8.1.0",
     "eslint-config-vtex": "^12.2.1",
     "eslint-config-vtex-react": "^6.2.1",
     "prettier": "^1.19.1",
@@ -16,6 +16,7 @@
   },
   "dependencies": {
     "@vtex/api": "^6.45.0",
-    "@vtex/clients": "^2.13.0"
+    "@vtex/clients": "^2.13.0",
+    "@zxing/library": "^0.18.6"
   }
 }
