--- a/react/package.json
+++ b/react/package.json
@@ -4,7 +4,7 @@
   },
   "dependencies": {
     "@vtex/css-handles": "^1.0.0",
-    "@zxing/library": "^0.17.0",
+    "@zxing/library": "0.17.1",
     "barcode-react-scanner": "^1.2.0",
     "classnames": "^2.2.6",
     "ramda": "^0.26.1",
@@ -16,7 +16,7 @@
   },
   "devDependencies": {
     "@types/classnames": "^2.2.7",
-    "@types/jest": "^24.0.18",
+    "@types/jest": "^27.0.2",
     "@types/node": "^12.7.5",
     "@types/prop-types": "^15.7.0",
     "@types/ramda": "^0.26.5",
