--- a/react/package.json
+++ b/react/package.json
@@ -5,14 +5,14 @@
   "dependencies": {
     "@vtex/css-handles": "^1.0.0",
     "@zxing/library": "0.17.1",
-    "barcode-react-scanner": "^1.2.0",
     "classnames": "^2.2.6",
     "ramda": "^0.26.1",
     "react": "^16.12.0",
     "react-apollo": "^3.1.3",
     "react-dom": "^16.12.0",
     "react-intl": "^3.12.0",
-    "react-qr-scanner": "^1.0.0-alpha.7"
+    "react-qr-scanner": "^1.0.0-alpha.7",
+    "@vtex/styleguide": "^9.145.1"
   },
   "devDependencies": {
     "@types/classnames": "^2.2.7",
