--- a/react/tsconfig.json
+++ b/react/tsconfig.json
@@ -14,5 +14,8 @@
     "target": "es2017",
     "esModuleInterop": true
   },
-  "include": ["./typings/*.d.ts", "./**/*.tsx", "./**/*.ts"]
+  "include": ["./typings/*.d.ts", "./**/*.tsx", "./**/*.ts"],
+  "typeAcquisition": {
+    "enable": false
+  }
 }
