--- a/manifest.json
+++ b/manifest.json
@@ -20,7 +20,8 @@
     "vtex.order-manager": "0.x",
     "vtex.pixel-manager": "1.x",
     "vtex.checkout-resources": "0.x",
-    "vtex.checkout-graphql": "0.x"
+    "vtex.checkout-graphql": "0.x",
+    "vtex.vtex-logger-react": "1.x"
   },
   "settingsSchema": {
     "title": "Qr & Barcode Reader",
