--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
   "vendor": "vtexarg",
   "name": "qr-barcode-reader",
-  "version": "1.6.1",
+  "version": "1.6.2-beta.0",
   "title": "qr-barcode-reader",
   "description": "qr-barcode-reader",
   "builders": {
