add more timeout

--- a/node/package.json
+++ b/node/package.json
@@ -1,11 +1,11 @@
 {
   "dependencies": {
-    "@vtex/api": "6.45.10",
+    "@vtex/api": "6.45.12",
     "@vtex/clients": "^2.13.0"
   },
   "devDependencies": {
     "@types/node": "^12.0.0",
-    "@vtex/api": "6.45.10",
+    "@vtex/api": "6.45.12",
     "typescript": "3.9.7",
     "vtex.checkout-graphql": "http://vtex.vtexassets.com/_v/public/typings/v1/vtex.checkout-graphql@0.65.1/public/@types/vtex.checkout-graphql",
     "vtex.checkout-resources": "http://vtex.vtexassets.com/_v/public/typings/v1/vtex.checkout-resources@0.48.0/public/@types/vtex.checkout-resources",
@@ -15,8 +15,7 @@
     "vtex.pixel-manager": "http://vtex.vtexassets.com/_v/public/typings/v1/vtex.pixel-manager@1.8.0/public/@types/vtex.pixel-manager",
     "vtex.session-client": "http://vtex.vtexassets.com/_v/public/typings/v1/vtex.session-client@1.0.2/public/@types/vtex.session-client",
     "vtex.styleguide": "http://vtex.vtexassets.com/_v/public/typings/v1/vtex.styleguide@9.146.1/public/@types/vtex.styleguide",
-    "vtex.vtex-logger-react": "http://vtex.vtexassets.com/_v/public/typings/v1/vtex.vtex-logger-react@1.0.1/public/@types/vtex.vtex-logger-react",
-    "vtexarg.qr-barcode-reader": "https://chef2--arvitalqa.myvtex.com/_v/private/typings/linked/v1/vtexarg.qr-barcode-reader@1.4.3+build1649343594/public/@types/vtexarg.qr-barcode-reader"
+    "vtex.vtex-logger-react": "http://vtex.vtexassets.com/_v/public/typings/v1/vtex.vtex-logger-react@1.0.1/public/@types/vtex.vtex-logger-react"
   },
   "resolutions": {
     "**/**/minimist": "^0.2.1",
