--- a/react/package.json
+++ b/react/package.json
@@ -4,6 +4,7 @@
   },
   "dependencies": {
     "@vtex/css-handles": "^1.0.0",
+    "@vtex/styleguide": "^9.97.5",
     "@zxing/library": "0.17.1",
     "classnames": "^2.2.6",
     "ramda": "^0.26.1",
@@ -11,8 +12,7 @@
     "react-apollo": "^3.1.3",
     "react-dom": "^16.12.0",
     "react-intl": "^3.12.0",
-    "react-qr-scanner": "^1.0.0-alpha.7",
-    "@vtex/styleguide": "^9.145.1"
+    "react-qr-reader": "^3.0.0-beta-1"
   },
   "devDependencies": {
     "@types/classnames": "^2.2.7",
